2012-02-03  James Robinson  <jamesr@chromium.org>

        [chromium] Support detaching TextureManager from ManagedTexture
        https://bugs.webkit.org/show_bug.cgi?id=77655

        Adds unit test for destroying a TextureManager while ManagedTextures are still alive referring to it.

        Reviewed by Kenneth Russell.

        * tests/TextureManagerTest.cpp:

2012-02-06  Matthew Delaney  <mdelaney@apple.com>

        toDataURL() uses stale data after putImageData()
        https://bugs.webkit.org/show_bug.cgi?id=65767

        Reviewed by Chris Marrin.

        * src/WebViewImpl.cpp: Updated method name.
        (WebKit::WebViewImpl::doPixelReadbackToCanvas):

2012-02-06  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        Provide more attribute methods in Element
        https://bugs.webkit.org/show_bug.cgi?id=77800

        Reviewed by Ryosuke Niwa.

        * src/WebPageSerializerImpl.cpp:
        (WebKit::WebPageSerializerImpl::openTagToString): access attributes via Element interface.

2012-02-04  Shawn Singh  <shawnsingh@chromium.org>

        [chromium] Add support to force full damage in CCDamageTracker
        https://bugs.webkit.org/show_bug.cgi?id=76805

        Reviewed by James Robinson.

        * tests/CCDamageTrackerTest.cpp:
        (WebKitTests::TEST_F):
        (WebKitTests):

2012-02-03  James Robinson  <jamesr@chromium.org>

        [chromium] Defer makeContextCurrent in compositor until first frame
        https://bugs.webkit.org/show_bug.cgi?id=77269

        Reviewed by Kenneth Russell.

        * tests/CCLayerTreeHostTest.cpp:
        (WTF::CCLayerTreeHostTestSetViewportSize::beginTest):
        * tests/TiledLayerChromiumTest.cpp:
        (WTF::TEST):

2012-02-03  Beth Dakin  <bdakin@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=77691
        Fix PlatformScreen layering violation and PlatformScreenMac's incorrect use 
        of device scale

        Reviewed by Andy Estes.
